--- a/nginx.json
+++ b/nginx.json
@@ -4,10 +4,10 @@
 		"version": "1.0.0",
 		"website": "https://www.nginx.com/",
 		"icon": "https://cdn-1.wp.nginx.com/wp-content/themes/nginx-theme/assets/img/logo.svg",
-		"more_info": "At startup the config file named default.conf gets created in the config volume if the directory is empty. Extend it with your own custom configuration.<br/>An example configuration file can be found <a href='https://www.nginx.com/resources/wiki/start/topics/examples/full/'>in the nginx wiki</a>. The config volume can be refered as <pre>/config</pre>",
+		"more_info": "You must <a href='https://gist.github.com/JasonTarka/63d632b5633fb0840cdfb3b56a14d388'>create a default config file</a> in the Config Storage share before starting this Rockon, which you can extend with your own custom configuration.<br/>For advanced users, an example configuration file can be found <a href='https://www.nginx.com/resources/wiki/start/topics/examples/full/'>in the nginx wiki</a>. The config volume is mounted at <pre>/etc/nginx/conf.d/</pre>",
 		"containers": {
 			"nginx": {
-				"image": "jtarka/nginx",
+				"image": "nginx",
 				"tag": "latest",
 				"launch_order": 1,
 				"ports": {
@@ -27,8 +27,8 @@
 					}
 				},
 				"volumes": {
-					"/config": {
-						"description": "Choose a Share for the nginx configuration. Eg: create a Share called nginx-config for this purpose alone.",
+					"/etc/nginx/conf.d": {
+						"description": "Choose a Share for the nginx configuration. Eg: create a Share called nginx-config for this purpose alone.<br/>You must <a href='https://gist.github.com/JasonTarka/63d632b5633fb0840cdfb3b56a14d388'>add a default config file</a>.",
 						"label": "Config Storage",
 						"min_size": 10240
 					},
