--- a/NginxProxyManager.json
+++ b/NginxProxyManager.json
@@ -39,7 +39,7 @@
 						"index": 1
 					},
 					"PGID": {
-						"description": "Enter a valid GID to use along with the same UID. It(or the above UID) must have full permissions to all Shares mapped in the previous step.",
+						"description": "Enter a valid GID to use along with the same UID. It (or the above UID) must have full permissions to all shares mapped in the previous step.",
 						"label": "GID",
 						"index": 2
 					}
