Update location of validator

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -2,11 +2,11 @@ name: rockon-validator
 on: [pull_request]
 jobs:
   validate:
-    name: runner / suggester / validator
+    name: rockon validator
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: go install github.com/StephenBrown2/rockon-validator@latest
+      - run: go install github.com/rockstor/rockon-validator@latest
       - run: rockon-validator -w .
       - uses: reviewdog/action-suggester@v1
         with:
