--- a/WireGuardEasy.json
+++ b/WireGuardEasy.json
@@ -83,7 +83,7 @@
 				}
 			}
 		},
-		"description": "<p>The easiest way to run WireGuard VPN + Web-based Admin UI.</p><p>Based on the custom docker image by <a href='Emile Nijssen' target='_blank'>https://github.com/WeeJeWel</a>: <a href='https://github.com/wg-easy/wg-easy/pkgs/container/wg-easy' target='_blank'>https://github.com/wg-easy/wg-easy/pkgs/container/wg-easy</a>, available for amd64 and arm64 architecture.</p>",
+		"description": "<p>The easiest way to run WireGuard VPN + Web-based Admin UI.</p><p>Based on the custom docker image by <a href='https://github.com/WeeJeWel' target='_blank'>Emile Nijssen</a>: <a href='https://github.com/wg-easy/wg-easy/pkgs/container/wg-easy' target='_blank'>https://github.com/wg-easy/wg-easy/pkgs/container/wg-easy</a>, available for amd64 and arm64 architecture.</p>",
 		"ui": {
 			"slug": ""
 		},
