--- a/.github/workflows/rockon_validator.yaml
+++ b/.github/workflows/rockon_validator.yaml
@@ -16,7 +16,7 @@ on:
 jobs:
   # This workflow contains a single job called "validate"
   validate:
-    name: runner / suggester / validator
+    name: rockon validator
     runs-on: ubuntu-latest
 
     steps:
@@ -24,11 +24,11 @@ jobs:
       - uses: actions/checkout@v4
 
       # install the latest version of Rockon validator
-      - name: Setup latest Rockon validator
+      #- name: Setup latest Rockon validator
       - run: go install github.com/rockstor/rockon-validator@latest
 
       # Runs a set of commands using the runners shell
-      - name: run validation (no rewrite)
+      #- name: run validation (no rewrite)
       - run: rockon-validator -w .
       - uses: reviewdog/action-suggester@v1
         with:
