--- a/.github/workflows/rockon_validator.yaml
+++ b/.github/workflows/rockon_validator.yaml
@@ -49,9 +49,4 @@ jobs:
 # show differentials based on ideal Rockon schema and whether it's in the root.json file
       - name: Process all changed json files
         if: steps.changed-json-files.outputs.any_changed == 'true'
-        env:
-          ALL_CHANGED_FILES: ${{ steps.changed-json-files.outputs.all_changed_files }}
-        run: |
-          for jsonfile in ${ALL_CHANGED_FILES}; do
-            rockon-validator -d $jsonfile
-          done
+        run: rockon-validator -c -d ${{ steps.changed-json-files.outputs.all_changed_files }}
