--- a/NginxProxyManager.json
+++ b/NginxProxyManager.json
@@ -1,33 +1,30 @@
 {
   "Nginx proxy manager": {
+    "description": "Managing Nginx proxy hosts with a simple, powerful interface.<p>Based on a <a href='https://hub.docker.com/r/jlesage/nginx-proxy-manager/' target='_blank'>custom OCI image</a>, available for amd64 and arm64 architecture.</p>",
+    "version": "1.1",
+    "website": "https://nginxproxymanager.com/",
+    "more_info": "<h4>First time login</h4><p>Default username is<code>admin@example.com</code>and password is<code>changeme</code>. Make sure to change both the username and password after the first login.</p>",
+    "volume_add_support": true,
     "containers": {
       "nginx-proxy": {
         "image": "jlesage/nginx-proxy-manager",
         "launch_order": 1,
-        "opts": [
-          [
-            "-e",
-            "DISABLE_IPV6=true"
-          ]
-        ],
         "ports": {
-          "8181": {
-            "description": "Admin WebUI port",
-            "host_default": 8181,
-            "label": "WebUI Port [e.g. 8181]",
-            "ui": true
+          "4443": {
+            "description": "Port where nginx will listen for https connections",
+            "label": "Https port [e.g. 4443]",
+            "host_default": 4443
           },
           "8080": {
             "description": "Port where nginx will listen for http connections",
-            "host_default": 8080,
             "label": "Http port [e.g. 8080]",
-            "ui": false
+            "host_default": 8080
           },
-          "4443": {
-            "description": "Port where nginx will listen for https connections",
-            "host_default": 4443,
-            "label": "Https port [e.g. 4443]",
-            "ui": false
+          "8181": {
+            "description": "Admin WebUI port",
+            "label": "WebUI Port [e.g. 8181]",
+            "host_default": 8181,
+            "ui": true
           }
         },
         "volumes": {
@@ -37,28 +34,25 @@
             "min_size": 1073741824
           }
         },
+        "opts": [
+          [
+            "-e",
+            "DISABLE_IPV6=true"
+          ]
+        ],
         "environment": {
-          "PUID": {
-            "description": "UID to run NginxProxyManager as.",
-            "label": "UID",
-            "index": 1
-          },
           "PGID": {
             "description": "Enter a valid GID to use along with the same UID. It (or the above UID) must have full permissions to all shares mapped in the previous step.",
             "label": "GID",
             "index": 2
+          },
+          "PUID": {
+            "description": "UID to run NginxProxyManager as.",
+            "label": "UID",
+            "index": 1
           }
         }
       }
-    },
-    "description": "Managing Nginx proxy hosts with a simple, powerful interface.<p>Based on a <a href='https://hub.docker.com/r/jlesage/nginx-proxy-manager/' target='_blank'>custom OCI image</a>, available for amd64 and arm64 architecture.</p>",
-    "more_info": "<h4>First time login</h4><p>Default username is<code>admin@example.com</code>and password is<code>changeme</code>. Make sure to change both the username and password after the first login.</p>",
-    "ui": {
-      "https": false,
-      "slug": ""
-    },
-    "volume_add_support": true,
-    "website": "https://nginxproxymanager.com/",
-    "version": "1.1"
+    }
   }
 }
