After rockon-validator fixes #56 #524
The effective changes post proposed:
- Revise treatment of "ui" element #56 #57

to the rockon-validator re top-level `ui` element.

--- a/unifi-network-app-linuxserver.json
+++ b/unifi-network-app-linuxserver.json
@@ -5,7 +5,8 @@
     "website": "https://ui.com/",
     "more_info": "To limit memory add MEM_LIMIT=1024M as a custom argument after install.",
     "ui": {
-      "https": true
+      "https": true,
+      "slug": ""
     },
     "containers": {
       "unifi-db": {
